fix home border alignment

--- a/src/style/layout.css
+++ b/src/style/layout.css
@@ -148,9 +148,7 @@ body {
   font-size: 16px;
   font-weight: 700;
   padding-top: 1rem;
-  padding-left: 0.5rem;
   margin: 0;
-  margin-left: -0.5rem;
   color: var(--theme-foreground);
 }
 
